--- a/qt_test/CMakeLists.txt
+++ b/qt_test/CMakeLists.txt
@@ -27,6 +27,8 @@ qt_add_executable(lab2
         Sequence.h
         tests.h
         Generator.h
+        mainwindow.cpp
+        mainwindow.h
 )
 
 target_link_libraries(lab2 PRIVATE Qt6::Core Qt6::Widgets)
