--- a/qt_test/CMakeLists.txt
+++ b/qt_test/CMakeLists.txt
@@ -33,12 +33,12 @@ qt_add_executable(lab2
         inputdialog.h
         sortchoicedialog.cpp
         sortchoicedialog.h
-        sortchoicedialogBook.cpp
         sortchoicedialogBook.h
         inputdialogBooks.h
         Generator.cpp
         BookCardComporator.cpp
         showDataDialog.h
+        SortingGraphsDialog.h
 )
 
 target_link_libraries(lab2 PRIVATE Qt6::Core Qt6::Widgets)
